--- a/singleSignOn/pom.xml
+++ b/singleSignOn/pom.xml
@@ -21,13 +21,19 @@
 
 	<dependencies>
 		<dependency>
-		   	<groupId>org.springframework.security</groupId>
-		   	<artifactId>spring-security-web</artifactId>
-		</dependency>  
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency>
 		<dependency>
-    <groupId>org.springframework.security</groupId>
-    <artifactId>spring-security-config</artifactId>
-</dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-oauth2</artifactId>
+			<version>v2-rev65-1.17.0-rc</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-client</artifactId>
