--- a/pets/src/main/resources/application-demo.properties
+++ b/pets/src/main/resources/application-demo.properties
@@ -3,12 +3,13 @@ spring.profiles.active=@spring.profiles.active@
 spring.security.oauth2.client.registration.google.clientId=887141705829-9tsugt3rmq37r2cd573119if5bl7cqma.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.clientSecret=hcH5KOt2mJbUwnM_CLcO9s0o
 
+server.port=5000
 
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=gl2sosin
+spring.datasource.url=jdbc:postgresql://adopttydb.ctnzncgoeofh.us-east-1.rds.amazonaws.com:5432/postgres
+spring.datasource.username=adopttyAdmin
+spring.datasource.password=adopttyAdmin
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
